plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.6.0'

description = 'OpenCADC Registry client library'
def git_url = 'https://github.com/opencadc/reg'

dependencies {
    compile 'org.jdom:jdom2:[2.0.6,)'
    compile 'xerces:xercesImpl:[2.12.0,)'

    compile 'org.opencadc:cadc-util:[1.6,)'

    testCompile 'junit:junit:[4.12,)'
    testCompile 'org.opencadc:cadc-quality:[1.0,)'
}



